<resources>
    <string name="app_name">FitMe</string>
    <string name="aliment_name_label">Name</string>
    <string name="aliment_protein_label">Protein</string>
    <string name="aliment_carbs_label">Carbs</string>
    <string name="aliment_fats_label">Fats</string>
    <string name="et_name_hint">Name</string>
    <string name="et_protein_hint">Protein</string>
    <string name="et_carbs_hint">Carbs</string>
    <string name="et_fats_hint">Fats</string>
    <string name="enter_aliment_label">Enter a new aliment</string>
    <string name="add_aliment_ok_btn">Add</string>
    <string name="add_aliment_cancel_btn">Cancel</string>
    <string name="no_data_available">No aliments in database</string>
    <string name="instructions">Press the glass of water after you\'ve hydrated.</string>
    <string name="water_increment_content_desc">Press to record drinking water</string>
    <string name="default_water_count">0</string>
    <string name="default_charge_notification_count">Hydrate while charging reminder sent 0 times</string>
    <string name="charging_plug_content_desc">charging plug image</string>
    <plurals name="charge_notification_count">
        <item quantity="zero">Hydrate while charging reminder sent %d times</item>
        <item quantity="one">Hydrate while charging reminder sent %d time</item>
        <item quantity="other">Hydrate while charging reminder sent %d times</item>
    </plurals>
    <string name="water_chug_toast">GLUG GLUG GLUG</string>
    <string name="charging_reminder_notification_title">Device Charging - Where\'s that water?</string>
    <string name="charging_reminder_notification_body">There\'s never a better time to drink water than when you know your phone is charging. Drink up!</string>
    <string name="pref_show_protein_key" translatable="false">show_protein</string>
    <string name="pref_show_protein_label" translatable="false">Show protein</string>
    <string name="pref_show_true" translatable="false">Shown</string>
    <string name="pref_show_false" translatable="false">Hidden</string>
    <string name="pref_show_measure_unit_label" translatable="false">Measure unit</string>
    <string name="pref_show_measure_unit_key" translatable="false">measure_unit</string>
    <string name="pref_kilo_label" translatable="false">Kilograms</string>
    <string name="pref_kilo_value" translatable="false">kilograms</string>
    <string name="pref_pounds_label" translatable="false">Pounds</string>
    <string name="pref_pounds_value" translatable="false">pounds</string>

</resources>
