<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_aliment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/et_name_hint" />

    <EditText
        android:id="@+id/et_aliment_protein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/et_protein_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_aliment_carbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/et_carbs_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_aliment_fats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/et_fats_hint"
        android:inputType="numberDecimal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_add_aliment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/add_aliment_cancel_btn"
            />

        <Button
            android:id="@+id/btn_ok_add_aliment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/add_aliment_ok_btn"
            />

    </LinearLayout>


</LinearLayout>